--- a/assets/src/css/frontend/site-components/_site-component-main.scss
+++ b/assets/src/css/frontend/site-components/_site-component-main.scss
@@ -9,7 +9,8 @@
 
 
 .site-component-main {
-    
+    margin-top: 0 !important;
+
     // Block editor setting
     .block-editor-iframe__body & {
         display: block;
